@@ -29,6 +29,7 @@ depth: 1
 
  * Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
  * Avoid an error when the moderation panel (admin dashboard) contains both snippets and private pages (Matt Westcott)
+ * When deleting collections, ensure the collection name is correctly shown in the success message (LB (Ben) Johnston)
 
 ### Documentation
 
